Fixed media query for collapsed affix still scrolling.

--- a/theme/style.css
+++ b/theme/style.css
@@ -60,7 +60,7 @@ code {
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 979px) {
 	#toc {
    width: auto;
    margin-bottom: 20px;
